9854
The bug is that the following does not collide:
```scala
scala> class Foo(a:Int = 1, b:Int) {
     | def this(a:Int, b:Boolean = false) = this(a,0)
     | }
defined class Foo
```

by analogy to
```scala
scala> :pa
// Entering paste mode (ctrl-D to finish)

class Bar {
def foo(a:Int = 1, b:Int) = ???
def foo(a:Int, b:Boolean = false) = ???
}

// Exiting paste mode, now interpreting.

<console>:7: error: in class Bar, multiple overloaded alternatives of method foo define default arguments.
       class Bar {
             ^
```




